lukituksen refaktorointia
Refaktoroitu Suoritustapa käyttämään geneerisempää lukitussysteemiä.